# BadVm

./: LICENSE  README.md  opcodes  out  playground
examples/: Graph.bsm  Main.bsm
lang/: Main.bsm  Word.bsm  build.gradle.kts  settings.gradle.kts
lang/src/main/kotlin/org/toptobes/: Test.kt
lang/src/main/kotlin/org/toptobes/lang/: Compiler.kt
lang/src/main/kotlin/org/toptobes/parsercombinator/: Contextual.kt  Exceptions.kt  ParseState.kt  PcStrCompiler.kt  StringParser.kt  Utils.kt
parser-combinator/: .gitignore  build.gradle.kts  settings.gradle.kts
parser-combinator/src/main/kotlin/org/toptobes/: Index.kt  Lang.kt  Playground.kt  Test.kt
parser-combinator/src/main/kotlin/org/toptobes/lang/: CodeGenerator.kt  CodeParser.kt  Compiler.kt  InstructionGenerator.kt  Instructions.kt  Nodes.kt  Preprocesser.kt  Registers.kt  SyntheticIntructions.kt  Tags.kt
parser-combinator/src/main/kotlin/org/toptobes/lang2/: CodeGenerator.kt  CodeParser.kt  Compiler.kt
parser-combinator/src/main/kotlin/org/toptobes/oldlang/: CodeGenerator.kt  CodeParser.kt  Compiler.kt
parser-combinator/src/main/kotlin/org/toptobes/utils/: ADTs.kt  (+1 more)
vm/: .gitignore  CMakeLists.txt
vm/src/: main.c
vm/src/vm/: cpu.c  cpu.h  debug.h  mem.c  mem.h  types.h  vm.c  vm.h
vm/src/vm/cpu/: cpu.c  cpu.h  opcodes.c  stack.c
vm/src/vm/cpu/opcodes/: opcodes.c  opcodes.h  opcodes_impls_jmps.c  opcodes_impls_logic.c  opcodes_impls_math.c  opcodes_impls_movs.c  opcodes_impls_special.c  opcodes_impls_stack.c  opcodes_impls_tests.c
vm/src/vm/memory/: mem.c  mem.h  memmap.c  memmap.h  mmu.c  mmu.h
(+167 files in other folders)
